upload file index html

--- a/index.html
+++ b/index.html
@@ -50,84 +50,114 @@
     </div>
 
     <div class="menu">
+        <!-- Bagian Minuman -->
         <div class="menu-item">
             <h3>Aqua</h3>
             <div class="price">Rp 5,000</div>
         </div>
         <div class="menu-item">
             <h3>Kopi Hitam</h3>
-            <p>Espresso dengan sedikit gula.</p>
-            <div class="price">Rp 12,000</div>
+            <div class="price">Rp 7,000</div>
         </div>
         <div class="menu-item">
             <h3>Kopi Susu</h3>
-            <p>Kopi hitam dicampur susu kental manis.</p>
             <div class="price">Rp 12,000</div>
         </div>
         <div class="menu-item">
-            <h3>Es Kopi Susu</h3>
-            <p>Kopi susu dingin dengan es batu.</p>
+            <h3>Kopi Gingseng</h3>
             <div class="price">Rp 15,000</div>
         </div>
         <div class="menu-item">
+            <h3>Kopi ala Vietnam Drip</h3>
+            <div class="price">Rp 20,000</div>
+        </div>
+
+        <!-- Bagian Teh -->
+        <div class="menu-item">
             <h3>Teh Manis</h3>
-            <p>Teh dengan campuran gula manis.</p>
-            <div class="price">Rp 12,000</div>
+            <div class="price">Rp 6,000</div>
         </div>
         <div class="menu-item">
             <h3>Teh Tropicana</h3>
-            <p>Teh rasa tropicana yang menyegarkan.</p>
-            <div class="price">Rp 12,000</div>
+            <div class="price">Rp 7,000</div>
+        </div>
+        <div class="menu-item">
+            <h3>Teh Hijau</h3>
+            <p>Kecil: Rp 7,000 / Besar: Rp 10,000</p>
+        </div>
+        <div class="menu-item">
+            <h3>Hot Coklat</h3>
+            <div class="price">Rp 10,000</div>
+        </div>
+        <div class="menu-item">
+            <h3>Dancow (Coklat/Putih)</h3>
+            <div class="price">Rp 10,000</div>
+        </div>
+
+        <!-- Bagian Es Minuman -->
+        <div class="menu-item">
+            <h3>Es Cappucino</h3>
+            <div class="price">Rp 15,000</div>
+        </div>
+        <div class="menu-item">
+            <h3>Es Milo</h3>
+            <p>Single: Rp 8,000 / Double: Rp 15,000</p>
+        </div>
+        <div class="menu-item">
+            <h3>Es Teh</h3>
+            <div class="price">Rp 8,000</div>
         </div>
         <div class="menu-item">
             <h3>Es Teh Susu</h3>
-            <p>Teh susu dingin dengan es batu.</p>
             <div class="price">Rp 12,000</div>
         </div>
         <div class="menu-item">
             <h3>Es Thaitea Green</h3>
-            <p>Es teh hijau ala Thai yang segar.</p>
-            <div class="price">Rp 15,000</div>
+            <div class="price">Rp 17,000</div>
         </div>
         <div class="menu-item">
             <h3>Es Thaitea</h3>
-            <p>Es teh manis ala Thai.</p>
-            <div class="price">Rp 15,000</div>
+            <div class="price">Rp 17,000</div>
         </div>
         <div class="menu-item">
-            <h3>Es Milk Chocolate</h3>
-            <p>Es coklat susu yang creamy.</p>
+            <h3>Lemon Tea (Panas/Dingin)</h3>
+            <div class="price">Rp 12,000</div>
+        </div>
+
+        <!-- Bagian Jus -->
+        <div class="menu-item">
+            <h3>Jus Alpukat</h3>
             <div class="price">Rp 20,000</div>
         </div>
         <div class="menu-item">
-            <h3>Ekstrajos Susu</h3>
-            <p>Minuman segar dengan tambahan susu ekstra.</p>
+            <h3>Jus Naga</h3>
+            <div class="price">Rp 20,000</div>
+        </div>
+        <div class="menu-item">
+            <h3>Jus Sirsak</h3>
+            <div class="price">Rp 20,000</div>
+        </div>
+        <div class="menu-item">
+            <h3>Jus Mangga</h3>
+            <div class="price">Rp 20,000</div>
+        </div>
+        <div class="menu-item">
+            <h3>Jus Mix Naga Sirsak</h3>
+            <div class="price">Rp 25,000</div>
+        </div>
+
+        <!-- Bagian Makanan -->
+        <div class="menu-item">
+            <h3>Roti Bakar (All Variant)</h3>
             <div class="price">Rp 15,000</div>
         </div>
         <div class="menu-item">
-            <h3>Es Milo Susu</h3>
-            <p>Minuman Milo dingin dengan susu.</p>
+            <h3>Mie Ceplok (All Variant)</h3>
             <div class="price">Rp 15,000</div>
         </div>
         <div class="menu-item">
-            <h3>Roti Bakar Coklat</h3>
-            <p>Roti bakar dengan selai coklat lezat.</p>
+            <h3>Pisang Paket</h3>
             <div class="price">Rp 15,000</div>
-        </div>
-        <div class="menu-item">
-            <h3>Roti Bakar Coklat Keju</h3>
-            <p>Roti bakar coklat dengan tambahan keju.</p>
-            <div class="price">Rp 15,000</div>
-        </div>
-        <div class="menu-item">
-            <h3>Roti Bakar Srikaya</h3>
-            <p>Roti bakar dengan selai srikaya.</p>
-            <div class="price">Rp 15,000</div>
-        </div>
-        <div class="menu-item">
-            <h3>Roti Bakar Gula</h3>
-            <p>Roti bakar dengan taburan gula manis.</p>
-            <div class="price">Rp 12,000</div>
         </div>
     </div>
 </body>
